# deltalink

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
data/: sales_suppliers.json
deltalink/: dependencies.py  main.py
deltalink/api/: catalog.py  data.py  health.py  main.py  sql.py  user.py
deltalink/core/: auth.py  config.py  util.py
deltalink/types/: delta_table.py  schema_info.py
infra/: main.bicep
scripts/: csv_to_json.py  data_loader.py  data_loader_parquet.py
tests/: test_util.py
